syntax = "proto3";
package pb;

import "proto/user.proto";

option go_package = "backend-masterclass/rpc";

message ListUsersRequest {
  int32 page_id = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated UserResponse body = 1; // Check if it works with UserResponse instead of User.
}